# YukiV7

./: .gitignore  CHANGELOG.md  DEVLOG.md  README.md  V7_AUDIT_REPORT.md  V7_LOGIC_OVERVIEW.md  blacklist.txt  main.py  project_for_ai_v7.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.hermes/plans/: 2026-05-18_bus-hardening.md
.trae/rules/: git-commit-message.md
.trae/skills/pre-commit-check/: SKILL.md
configs/: config.example.yaml  identities.yaml  plugins.yaml
desktop_agent/: yuki_brain.py  yuki_eye.user.js
docs/: EVENT_FORMAT.md  MIGRATION_CHECKLIST.md  PLUGIN_SPEC.md  V6_V7_GAP_ANALYSIS.md  V7_TECHNICAL.md
plugins/: __init__.py
plugins/capabilities/: __init__.py
plugins/capabilities/maid_plugin/: __init__.py  core.py
scripts/: flatten_project_codes.py
tests/: simulate_dataflow.py  test_qq_plugin.py  test_qq_plugin_imports.py
yuki_core/: __init__.py  bus.py  config.py  history.py  identity.py  llm.py  logger.py  maid.py  memory.py  mind.py  models.py  plugin.py
