[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "yuki-agent"
version = "0.1.0"
description = "Yuki Agent - 多平台 AI Agent 框架"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Eganchiyu"}
]

dependencies = [
    # 核心
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    
    # 记忆系统
    "chromadb>=0.4",
    "sentence-transformers>=2.2",
    "jieba>=0.42",
    
    # 工具
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
qq = [
    "websockets>=12.0",
]
web = [
    "fastapi>=0.100",
    "uvicorn>=0.22",
]
voice = [
    "openai-whisper>=20230918",
]
all = [
    "yuki-agent[dev,qq,web,voice]",
]

[tool.setuptools.packages.find]
include = ["yuki_core*", "plugins*"]
